<resources>
    <!-- General -->
    <string name="app_name" translatable="false">LANFinder</string>
    <string name="fab_menu" translatable="false">Menu button, extends to show more options</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- CreateLan activity -->
    <string name="name_your_lan_party">Name your Lan party!</string>
    <string name="enter_your_location">City</string>
    <string name="enter_date_time">Please enter a date and time</string>
    <string name="max_players">Max. Players</string>
    <string name="select_game">Select Game</string>
    <string name="create">Create</string>
    <string name="description">Description (optional)</string>
    <string name="plz">Post Code</string>
    <string name="create_lan_party">Create a LAN Party</string>
    <string name="choose_games">Choose games</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear all</string>
    <string name="enter_name">Please enter a name!</string>
    <string name="enter_postal_code">Please enter a postal code!</string>
    <string name="enter_city">Please enter a city!</string>
    <string name="enter_max_players">Please enter a maximum number of players!</string>
    <string name="select_date_and_time">Please select a date and time!</string>
    <string name="select_a_game">Please select a game!</string>
    <string name="create_lan">Create LAN</string>
    <string name="do_you_want_to_create_this_lan">Do you want to create this LAN?</string>
    <string name="lan_created">LAN created</string>
    <string name="no">No</string>
    <!-- Register -->
    <string name="sign_up">Sign Up</string>
    <string name="write_a_message">Write a message</string>
    <string name="this_lan_is_already_full">This LAN is already full!</string>
    <!-- Manage Lan-party -->
    <string name="delete_lan">Delete LAN</string>
    <string name="are_you_sure_you_want_to_sign_off_of_this_lan">Are you sure you want to sign off of this LAN?</string>
    <string name="sign_off">Sign off</string>
    <string name="my_lans">My LAN\'s</string>
    <string name="are_you_sure_you_want_to_delete_this_lan">Are you sure you want to delete this LAN?</string>
    <string name="delete">Delete</string>
    <!-- Firebase -->
    <string name="signed_up_successfully">Signed up successfully!</string>
    <string name="lan_party_deleted_successfully">Lan party deleted successfully!</string>
    <string name="signed_off_successfully">Signed off successfully!</string>
    <string name="retry_connection">retry connection</string>
    <string name="offline">stay offline</string>
    <string name="offline_message_title">No Network connection!</string>
    <string name="offline_message_description">There are no updates in the Event list. To access all functions a network connection is required. </string>
    <!-- Filter -->
    <string name="btnFilter">Filter</string>
    <string name="filter_title">Filter List</string>
    <string name="use_this_filter">Apply this filter?</string>
    <string name="use">Apply</string>
    <string name="filter_applied">Filter applied</string>
    <!-- Others -->
    <string name="new_player_mail">New Player joined your Lan party</string>
    <string name="placeholder">Placeholder</string>
    <string name="tv_login_title_text">Welcome!</string>
    <string name="et_login_email_hint">Email</string>
    <string name="et_login_password_hint">Password</string>
    <string name="btn_login_login_text">Login</string>
    <string name="tv_login_donthaveanaccount_text">Don\'t have an account?</string>
    <string name="tv_login_register_text"><u>Register</u></string>
    <string name="tv_login_forgotpassword_text"><u>Forgot password?</u></string>
    <string name="tv_register_title_text">Create an account</string>
    <string name="til_register_firstname_hint">First name</string>
    <string name="til_lastname_hint">Last name</string>
    <string name="til_register_confirmpassword_hint">Confirm Password</string>
    <string name="cb_register_termsandcondition_text">I agree to the Terms and Conditions</string>
    <string name="btn_register_register_text">Register</string>
    <string name="tv_register_alreadyhaveanaccount_text">Already have an account?</string>
    <string name="tv_register_login_text"><u>Login</u></string>
    <string name="tv_forgotpassword_title_text">Forgot password?</string>
    <string name="tv_forgotpassword_description_text">Please enter your email address and we\'ll send you an email to reset your password.</string>
    <string name="btn_forgotpassword_submit_text">Submit</string>
    <string name="til_register_username_hint">Username</string>
    <string name="an_email_was_sent_to_your_email_address">An email was sent to your email address</string>
    <string name="please_enter_your_email_address">Please enter your email address.</string>
    <string name="you_are_logged_in">You are logged in :)</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="a_new_user_has_been_created_with_firebase">A new user has been created with Firebase</string>
    <string name="you_are_registered_successfully">You are registered successfully.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_and_confirm_password_do_not_match">Password and confirm password do not match.</string>
    <string name="please_agree_terms_and_conditions">Please agree terms and conditions</string>
    <string name="mylans">My Lans</string>
    <string name="filter_lan">Filter LAN</string>
    <string name="logout">Logout</string>
    <string name="sign_off_of_lan">Sign off of LAN</string>
</resources>