<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#35393E"
    android:fillViewport="false"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context=".activities.CreateLan">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/offline_message_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/offline_message_description"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/et_color"
            android:text="@string/retry_connection"
            android:textColor="@color/actionbar_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_offline"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/et_color"
            android:text="@string/offline"
            android:textColor="@color/actionbar_color"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
