<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BurgerMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/fab_menu"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin_25dp"
            android:src="@drawable/ic_menu"
            app:backgroundTint="@color/fab_background"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/my_lans_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="@dimen/fab_margin_20dp"
            android:src="@drawable/ic_list"
            app:backgroundTint="@color/fab_background"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="@id/fab"
            android:contentDescription="@string/mylans" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_lan_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="@dimen/fab_margin_15dp"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@color/fab_background"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/my_lans_fab"
            app:layout_constraintEnd_toEndOf="@id/my_lans_fab"
            android:contentDescription="@string/create_lan" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_lan_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="@dimen/fab_margin_15dp"
            android:contentDescription="@string/filter_lan"
            android:src="@drawable/ic_filter"
            app:backgroundTint="@color/fab_background"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/create_lan_fab"
            app:layout_constraintEnd_toEndOf="@id/create_lan_fab" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/logout_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="@dimen/fab_margin_15dp"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_logout"
            app:backgroundTint="@color/fab_background"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/filter_lan_fab"
            app:layout_constraintEnd_toEndOf="@id/filter_lan_fab" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>