<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity"
    android:background="@color/background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgotpassword_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_forgotpassword_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_forgotpassword_title_text"
            android:textSize="@dimen/tv_20sp_textsize"
            android:textColor="@color/et_color"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_forgotpassword_description"
        android:layout_width="@dimen/tv_width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_16dp"
        android:layout_marginEnd="@dimen/tv_margin_16dp"
        android:layout_marginTop="@dimen/tv_margin_64dp"
        android:text="@string/tv_forgotpassword_description_text"
        android:textSize="@dimen/tv_forgotpassword_18sp_description_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_forgotpassword_toolbar"
        android:textColor="@color/et_color"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgotpassword_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/til_margin_16dp"
        android:layout_marginTop="@dimen/til_margin_20dp"
        android:layout_marginEnd="@dimen/til_margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotpassword_description"
        app:boxStrokeColor="@color/et_color"
        android:backgroundTint="@color/et_color"
        android:textColorHint="@color/et_color"
        app:hintTextColor="@color/et_color"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/et_color">

        <EditText
            android:id="@+id/et_forgotpassword_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/et_color"
            android:hint="@string/et_login_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/et_color"
            android:textColorHint="@color/et_color"
            android:textSize="@dimen/et_16sp_textsize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgotpassword_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_16dp"
        android:layout_marginTop="@dimen/btn_margin_30dp"
        android:layout_marginEnd="@dimen/btn_margin_16dp"
        android:paddingTop="@dimen/btn_8dp_padding"
        android:paddingBottom="@dimen/btn_8dp_padding"
        android:text="@string/btn_forgotpassword_submit_text"
        android:textSize="@dimen/btn_18sp_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgotpassword_email"
        android:textColor="@color/et_color"/>
</androidx.constraintlayout.widget.ConstraintLayout>