<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateLan"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#35393E">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#35393E">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="22dp"
                android:autofillHints=""
                android:backgroundTint="@color/et_color"
                android:hint="@string/name_your_lan_party"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/icon_pen"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_plz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/et_color"
                android:hint="@string/plz"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/icon_location"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/et_color"
                android:hint="@string/enter_your_location"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                app:layout_constraintLeft_toRightOf="@id/et_plz"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <EditText
                android:id="@+id/et_maxPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/et_color"
                android:hint="@string/max_players"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/icon_players"
                app:layout_constraintTop_toBottomOf="@id/et_city" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/et_color"
                android:focusable="false"
                android:hint="@string/enter_date_time"
                android:importantForAutofill="no"
                android:inputType="datetime"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/icon_calendar"
                app:layout_constraintTop_toBottomOf="@id/et_maxPlayers" />

            <TextView
                android:id="@+id/tv_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:minHeight="36dp"
                android:text="@string/select_game"
                android:textColor="@color/et_color"
                android:padding="10dp"
                android:textSize="19sp"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:drawablePadding="31dp"
                android:layout_centerInParent="true"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                app:layout_constraintLeft_toRightOf="@+id/icon_game"
                app:layout_constraintTop_toBottomOf="@+id/et_date"
                app:drawableEndCompat="@android:drawable/arrow_down_float" />

            <TextView
                android:id="@+id/tv_error_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="42dp"
                android:minHeight="36dp"
                android:text=""
                android:textColor="@color/et_color"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/tv_games"
                app:layout_constraintTop_toBottomOf="@+id/et_date" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/et_color"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:minHeight="48dp"
                android:textColor="@color/et_color"
                android:textColorHint="@color/et_color"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_description"
                app:layout_constraintTop_toBottomOf="@id/tv_games" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/create"
                android:textSize="16sp"
                android:backgroundTint="@color/et_color"
                android:textColor="@color/actionbar_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <ImageView
                android:id="@+id/icon_pen"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_pen"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_pen"
                app:srcCompat="@drawable/ic_location"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_players"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_location"
                app:srcCompat="@drawable/ic_players"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_calendar"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_players"
                app:srcCompat="@drawable/ic_calendar"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_game"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_calendar"
                app:srcCompat="@drawable/ic_game"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_description"
                android:layout_width="36dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_games"
                app:srcCompat="@drawable/ic_description"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="at.fhjoanneum.lanfinderkotlin.fragments.BurgerMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout="@layout/fragment_burger_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>





